gcp/iap-ingress/base/gcp-credentials.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: iap-enabler
spec:
  template:
    spec:
      containers:
      - name: iap
        volumeMounts:
        - mountPath: /var/run/secrets/sa
          name: sa-key
          readOnly: true
      volumes:
      - name: sa-key
        secret:
          secretName: admin-gcp-sa
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: backend-updater
spec:
  template:
    spec:
      containers:
      - name: backend-updater
        volumeMounts:
        - mountPath: /var/run/secrets/sa
          name: sa-key
          readOnly: true
      volumes:
      - name: sa-key
        secret:
          secretName: admin-gcp-sa
