gcp/iap-ingress/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: whoami
  name: whoami-app
  namespace: $(istioNamespace)
spec:
  ports:
  - port: 80
    targetPort: 8081
  selector:
    app: whoami
  type: ClusterIP
